[gd_scene load_steps=8 format=2]

[ext_resource path="res://Components/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/progress_bars.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/control.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/ShootingManager.gd" type="Script" id=4]
[ext_resource path="res://Components/StatsManager.gd" type="Script" id=5]
[ext_resource path="res://Components/EnemyManager.gd" type="Script" id=6]
[ext_resource path="res://Components/Main.gd" type="Script" id=7]

[node name="Main" type="Node"]
script = ExtResource( 7 )

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="EnemyManager"]
wait_time = 5.0
autostart = true

[node name="ShootingManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="StatsManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 217, 386 )
scale = Vector2( 1, 1 )

[node name="hud" parent="." instance=ExtResource( 2 )]

[node name="control" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="EnemyManager/Timer" to="EnemyManager" method="_on_Timer_timeout"]
[connection signal="spawn_bullet" from="Player" to="ShootingManager" method="_on_Player_spawn_bullet"]
